kube/deployment.yml
#Same as Replicaset

apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-depl
  labels:
    app: myapp
    type: back-end
spec:
  template:
    metadata:
      name: myapp-pod
      labels:
        app: myapp
        type: back-end
    spec:
      containers:
        - name: kubtut
          image: kubetut:latest
          imagePullPolicy: IfNotPresent
          command: [ "mvn" ]
          args: [ "spring-boot:run" ]
  replicas: 1
  selector:
    matchLabels:
      type: back-end
