kube/pod-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: kub
spec:
  securityContext:
    runAsUser: 100 # user id for all containers
  containers:
    - name: kubtut
      image: kubetut:latest
      imagePullPolicy: IfNotPresent  # Use the local image if available
      # command and args will be default from dockerfile else overridden
      command: ["mvn"]
      args: ["spring-boot:run"]
      ports:
        - containerPort: 8081
      securityContext:
        runAsUser: 100 # user id for this container, will override the above one
        capabilities:
          add: [ "MAC_ADMIN" ]
#      env:
#        - name: var1
#          value: variable1
#        - name: var1
      #OR
#          valueFrom:
#            - configMapKeyRef:
#              name: app-config
#              key: var1
