kube/cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: ci
spec:
  type: ClusterIP # default type
  ports:
    - port: 80 # where service is exposed
      targetPort: 8081
  selector:
    app: myapp
