kube/service-definition.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  ports: # in POV of the service
    - port: 80 # where service listens
      targetPort: 8081 # port of the app
      nodePort: 30008 # where api calls will go
  selector:
    type: back-end # matching with deployment pod-spec
