kube/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress # Egress
  ingress: # egress
  - from: # to
      - podSelector:
          matchLabels:
            name: api-pod
        namespaceSelector:
          matchLabels:
            name: prod
      - ipBlock:
          cidr: <ip-address to allow, it can be outside kube  cluster>
    ports:
      protocol: TCP
      port: 3306
